--- a/pages html/perfil.html
+++ b/pages html/perfil.html
@@ -14,6 +14,7 @@
 
 <body>
     <div id="perfil">
+        <!-- ---------------------HEADER------------------ -->
         <header>
             <div id="notificaciones">
                 <i class="fas fa-exclamation-circle"></i>
@@ -23,23 +24,45 @@
             </div>
             <h1>SuperADAs!</h1>
         </header>
+        <!-- ---------------------PERFIL------------------ -->
         <div id="perfil-container">
             <div class="fondo">
-                <div class="burbuja">
-                    <!-- <a>
-                        <img src="../img/"/>
-                    </a> -->
+                <div class="columns">
+                    <aside class="columna-izquierda"></aside>
+                    <main class="columna-central">
+                        <h2 id="nombre-usuario">Alberta</h2>
+                        <img class="img-puntaje-usuario" src="../img/Clara/1024x1024/clean - 6.png" />
+                        <h2 id="puntaje-usuario">0 puntos</h2>
+                        <div class="contenedor-nivel">
+                            <h2 id="nivel-usuario">Nivel 1</h2>
+                        </div>
+                    </main>
+                    <aside class="columna-derecha">
+                        <div class="burbujas-seguidores">
+                            <div class="numero-siguiendo">0</div>
+                            <h3>Te Siguen</h3>
+                            <img class="img-siguiendo" src="../img/Clara/1024x1024/clean - 7.png" />
+                        </div>
+                        <div class="burbujas-seguidores">
+                            <img class="img-te-siguen" src="../img/Clara/1024x1024/clean - 7.png" />
+                        </div>
+                    </aside>
                 </div>
-
             </div>
         </div>
 
     </div>
     <footer>
-            <!-- <a href="https://www.freepik.com/free-photos-vectors/template">Template vector created by starline - www.freepik.com</a> -->
+        <!-- <a href="https://www.freepik.com/free-photos-vectors/template">Template vector created by starline - www.freepik.com</a> -->
     </footer>
 
 </body>
 <script src="../JS/perfil.js" type="text/javascript"></script>
 
 </html>
+
+<!-- <div class="burbuja">
+                    <a>
+                        <img src="../img/Clara/1024x1024/1 - dots.png"/>
+                    </a>
+                </div> -->
