--- a/pages html/perfil.html
+++ b/pages html/perfil.html
@@ -73,7 +73,7 @@
                         <!-- NOMBRE USUARIO/PUNTAJE/NIVEL -->
                         <div class="datos-usuario">
                             <h2 id="nombre-usuario">Alberta</h2>
-                            <img class="img-puntaje-usuario" src="../img/Clara/1024x1024/5 - dot.png" />
+                            <img class="img-puntaje-usuario" src="../img/globos dialogo/globoPuntaje.png" />
                             <h2 id="puntaje-usuario">124 puntos</h2>
                             <div class="contenedor-nivel">
                                 <h2 id="nivel-usuario">Nivel 1</h2>
@@ -86,7 +86,7 @@
                             <div class="burbujas-seguidores" onclick="mostrarSeguidores()">
                                 <div class="numero-seguidores" id="num-seguidores">0</div>
                                 <h3>Te Siguen</h3>
-                                <img class="img-te-siguen" src="../img/Clara/1024x1024/clean - 2.png" />
+                                <img class="img-te-siguen" src="../img/globos dialogo/globo1.png" />
                             </div>
                             <div class="contenedor-seguidores" id="popup-seguidores">
                                 <div class="cerrar" onclick="ocultarSeguidores()">✖️</div>
@@ -96,7 +96,7 @@
                             <div class="burbujas-siguiendo" onclick="mostrarSiguiendo()">
                                 <div class="numero-que-sigues">0</div>
                                 <h3>Siguiendo</h3>
-                                <img class="img-siguiendo" src="../img/Clara/1024x1024/clean - 2.png" />
+                                <img class="img-siguiendo" src="../img/globos dialogo/globo1.png" />
                             </div>
                             <div class="contenedor-siguiendo" id="popup-siguiendo">
                                 <div class="cerrar" onclick="ocultarSiguiendo()">✖️</div>
