funcion actulizada de cambio de nombre

--- a/pages html/perfil.html
+++ b/pages html/perfil.html
@@ -44,6 +44,11 @@
                                 </a>
                             </div>
                             <div class="boton-nav">
+                                <a href="perfil.html">
+                                    <h2>perfil</h2>
+                                </a>
+                            </div>
+                            <div class="boton-nav">
                                 <!-- aca hay que poner la ref a la pagina de crear desafio -->
                                 <a href="">
                                     <h2>Crear Desafio</h2>
