seguidores y seguidos arreglado

--- a/pages html/perfil.html
+++ b/pages html/perfil.html
@@ -18,6 +18,7 @@
                 <i class="fas fa-exclamation-circle"></i>
                 <div class="lista-notificaciones" id="notificaciones-actualizadas">
                     <h2>Notificaciones!</h2>
+                    <h3 id="borrar-historial-notificaciones" onclick="borrarNotificaiones()">Borrar Notificaciones</h3>
                 </div>
             </div>
             <div class="logotipo">
