agrago home y login

--- a/pages html/perfil.html
+++ b/pages html/perfil.html
@@ -78,8 +78,8 @@
                     <main class="columna-central">
                         <!-- NOMBRE USUARIO/PUNTAJE/NIVEL -->
                         <div class="datos-usuario">
-                            <h2 id="nombre-usuario">Alberta</h2>
-                            <img class="img-puntaje-usuario" src="../img/globos dialogo/globoPuntaje.png" />
+                            <h2 id="nombre-usuario">aca va el nombre</h2>
+                            <img class="img-puntaje-usuario" src="../img/globosDialogo/globoPuntaje.png" />
                             <h2 id="puntaje-usuario">124 puntos</h2>
                             <div class="contenedor-nivel">
                                 <h2 id="nivel-usuario">Nivel 1</h2>
@@ -92,7 +92,7 @@
                             <div class="burbujas-seguidores" onclick="mostrarSeguidores()">
                                 <div class="numero-seguidores" id="num-seguidores">0</div>
                                 <h3>Te Siguen</h3>
-                                <img class="img-te-siguen" src="../img/globos dialogo/globo1.png" />
+                                <img class="img-te-siguen" src="../img/globosDialogo/globo1.png" />
                             </div>
                             <div class="contenedor-seguidores" id="popup-seguidores">
                                 <div class="cerrar" onclick="ocultarSeguidores()">✖️</div>
@@ -102,7 +102,7 @@
                             <div class="burbujas-siguiendo" onclick="mostrarSiguiendo()">
                                 <div class="numero-que-sigues">0</div>
                                 <h3>Siguiendo</h3>
-                                <img class="img-siguiendo" src="../img/globos dialogo/globo1.png" />
+                                <img class="img-siguiendo" src="../img/globosDialogo/globo1.png" />
                             </div>
                             <div class="contenedor-siguiendo" id="popup-siguiendo">
                                 <div class="cerrar" onclick="ocultarSiguiendo()">✖️</div>
@@ -117,6 +117,7 @@
     </div>
     <footer>
         <!-- <a href="https://www.freepik.com/free-photos-vectors/template">Template vector created by starline - www.freepik.com</a> -->
+        <!-- <a target="_blank" href="https://www.vexels.com/vectors/preview/73501/30-famous-people-avatars"> 30 Famous people avatars </a> | Free vector by <a target="_blank" href="https://www.vexels.com/">Vexels</a> -->
     </footer>
     <script src="../JS/perfil.js" type="text/javascript"></script>
 </body>
