--- a/pages html/preguntas.html
+++ b/pages html/preguntas.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,12 +8,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="stylesheet" type="text/css" href="styles/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/css/main.css" />
 </head>
 
 <body>
-    <!-- --------------------HOME------------------ -->
-    <div id="home">
+    <div id="preguntas">
         <!-- ---------------------HEADER------------------ -->
         <header>
             <div id="notificaciones" onclick="mostrarNotificacionesActualizadas()">
@@ -27,6 +27,7 @@
             </div>
             <h1>SuperADAs!</h1>
         </header>
+        <!-- ---------------------PERFIL------------------ -->
         <div id="perfil-container">
             <div id="fondo">
                 <div class="columns">
@@ -40,12 +41,12 @@
                                 </a>
                             </div>
                             <div class="boton-nav">
-                                <a href="index.html">
+                                <a href="../index.html">
                                     <h2>Home</h2>
                                 </a>
                             </div>
                             <div class="boton-nav">
-                                <a href="pages html/perfil.html">
+                                <a href="perfil.html">
                                     <h2>perfil</h2>
                                 </a>
                             </div>
@@ -76,39 +77,22 @@
                         </nav>
                     </aside>
                     <main class="columna-central">
-                        <div class="contenedor-botones-home">
-                            <div class="contenedor-boton-jugar">
-                                <h2>Jugar!</h2>
-                            </div>
-                            <div class="contenedor-boton-desafio">
-                                <h2>Desafio</h2>
-                            </div>
-                            <div class="contenedor-boton-competencia">
-                                <h2>Competencia</h2>
-                            </div>
-                        </div>
+                        <!-- NOMBRE USUARIO/PUNTAJE/NIVEL -->
+                   
                     </main>
                     <aside class="columna-derecha">
-                        <div class="perfil-home">
-                            <div class="datos-usuario">
-                                <h2 id="nombre-usuario">aca va el nombre</h2>
-                                <img class="img-puntaje-usuario" src="../img/globosDialogo/globoPuntaje.png" />
-                                <h2 id="puntaje-usuario">124 puntos</h2>
-                                <div class="contenedor-nivel">
-                                    <h2 id="nivel-usuario">Nivel 1</h2>
-                                </div>
-                            </div>
+                        <div class="contenedor-burbujas">
+                    
                         </div>
-
                     </aside>
-
                 </div>
             </div>
         </div>
 
     </div>
     <footer>
-
+        <!-- <a href="https://www.freepik.com/free-photos-vectors/template">Template vector created by starline - www.freepik.com</a> -->
+        <!-- <a target="_blank" href="https://www.vexels.com/vectors/preview/73501/30-famous-people-avatars"> 30 Famous people avatars </a> | Free vector by <a target="_blank" href="https://www.vexels.com/">Vexels</a> -->
     </footer>
     <script src="../JS/perfil.js" type="text/javascript"></script>
 </body>
