--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <!-- ---------------------NAVEGADOR------------------ -->
                         <nav class="navegador-general">
                             <div class="boton-nav">
-                                <a href="login.html">
+                                <a href="pages html/login.html">
                                     <h2>Log Out</h2>
                                 </a>
                             </div>
@@ -90,18 +90,19 @@
                     </main>
                     <aside class="columna-derecha">
                         <div class="perfil-home">
+                            <div class="contenedor-avatar">
+                                <div id="avatar"></div>
+                            </div>
                             <div class="datos-usuario">
                                 <h2 id="nombre-usuario">aca va el nombre</h2>
-                                <img class="img-puntaje-usuario" src="../img/globosDialogo/globoPuntaje.png" />
+                                <img class="img-puntaje-usuario" src="img/globosDialogo/globoPuntaje.png" />
                                 <h2 id="puntaje-usuario">124 puntos</h2>
                                 <div class="contenedor-nivel">
                                     <h2 id="nivel-usuario">Nivel 1</h2>
                                 </div>
                             </div>
                         </div>
-
                     </aside>
-
                 </div>
             </div>
         </div>
