--- a/pages html/perfil.html
+++ b/pages html/perfil.html
@@ -78,7 +78,7 @@
                     <main class="columna-central">
                         <!-- NOMBRE USUARIO/PUNTAJE/NIVEL -->
                         <div class="datos-usuario">
-                            <h2 id="nombre-usuario">aca va el nombre</h2>
+                            <h2 id="nombre-usuario"></h2>
                             <img class="img-puntaje-usuario" src="../img/globosDialogo/globoPuntaje.png" />
                             <h2 id="puntaje-usuario">124 puntos</h2>
                             <div class="contenedor-nivel">
