--- a/pages html/preguntas.html
+++ b/pages html/preguntas.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -77,12 +76,39 @@
                         </nav>
                     </aside>
                     <main class="columna-central">
-                        <!-- NOMBRE USUARIO/PUNTAJE/NIVEL -->
-                   
+                        <!-- CONTENEDOR CATEGORIAS -->
+                        <div id="contenedor-categorias" class="visible">
+                            <h1>Elegi una categoria</h1>
+                            <div class="categoria" class="cat-1">Pokemon</div>
+                            <div class="categoria" class="cat-2">Marvel</div>
+                            <div class="categoria" class="cat-3">Tarantino</div>
+                            <div class="categoria" class="cat-4">Random</div>
+                        </div>
+                        <!-- CONTENEDOR PREGUNTAS -->
+                        <div id="contenedor-preguntas" class="visible">
+                            <div class="barra-de-carga">
+                                <h3>Pregunta 1 de 10</h3>
+                            </div>
+                            <div class="pregunta"></div>
+                            <div class="respuesta-uno"></div>
+                            <div class="respuesta-dos"></div>
+                            <div class="respuesta-tres"></div>
+                            <div class="respuesta-cuatro"></div>
+                        </div>
                     </main>
                     <aside class="columna-derecha">
-                        <div class="contenedor-burbujas">
-                    
+                        <div class="perfil-preguntas">
+                            <div class="contenedor-avatar">
+                                <div id="avatar"></div>
+                            </div>
+                            <div class="datos-usuario">
+                                <h2 id="nombre-usuario">aca va el nombre</h2>
+                                <div class="contenedor-nivel">
+                                    <h2 id="nivel-usuario">Nivel 1</h2>
+                                </div>
+                                <img class="img-puntaje-usuario" src="../img/globosDialogo/globoPuntaje.png" />
+                                <h2 id="puntaje-usuario">124 puntos</h2>
+                            </div>
                         </div>
                     </aside>
                 </div>
