--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <footer>
 
     </footer>
-    <script src="../JS/perfil.js" type="text/javascript"></script>
+    <script src="JS/perfil.js" type="text/javascript"></script>
 </body>
 
 </html>
