--- a/pages html/preguntas.html
+++ b/pages html/preguntas.html
@@ -77,7 +77,7 @@
                     </aside>
                     <main class="columna-central">
                         <!-- CONTENEDOR CATEGORIAS -->
-                        <div id="contenedor-categorias" class="visible">
+                        <div id="contenedor-categorias" class="cat-visible">
                             <h1>Elegi una categoria</h1>
                             <div class="categoria" class="cat-1">Pokemon</div>
                             <div class="categoria" class="cat-2">Marvel</div>
@@ -85,7 +85,7 @@
                             <div class="categoria" class="cat-4">Random</div>
                         </div>
                         <!-- CONTENEDOR PREGUNTAS -->
-                        <div id="contenedor-preguntas" class="visible">
+                        <div id="contenedor-preguntas" class="preguntas-visible">
                             <div class="barra-de-carga">
                                 <h3>Pregunta 1 de 10</h3>
                             </div>
@@ -114,7 +114,6 @@
                 </div>
             </div>
         </div>
-
     </div>
     <footer>
         <!-- <a href="https://www.freepik.com/free-photos-vectors/template">Template vector created by starline - www.freepik.com</a> -->
